
- SPL extension:
  . Fixed bug #53515 (property_exists incorrect on ArrayObject null and 0
    values). (Felipe)
    
- SQLite3 extension:
  . Fixed memory leaked introduced by the NULL poisoning patch (Mateusz Kocielski, Pierre)
  . Add SQlite3_Stmt::readonly() for checking if a statement is read only. (Scott)

- Streams:
  . Implemented FR #26158 (open arbitrary file descriptor with fopen). (Gustavo)

- XSL extension:
  . Fixed memory leaked introduced by the NULL poisoning patch (Mateusz Kocielski, Pierre)

- Zip extension:
  . Added the filename into the return value of stream_get_meta_data(). (Hannes)
  . Fixed bug #53568 (swapped memset arguments in struct initialization).
    (crrodriguez at opensuse dot org)
  . Fixed bug #53579 (stream_get_contents() segfaults on ziparchive streams) (Hannes)
  . Fixed bug #53603 (ZipArchive should quiet stat errors). (brad dot froehle at
    gmail dot com, Gustavo)

?? ??? 2011, PHP 5.3.5
- Fixed Bug #53632 (infinite loop with x87 fpu). (Scott, Rasmus)

09 Dec 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Security enhancements:
  . Fixed crash in zip extract method (possible CWE-170). 
    (Maksymilian Arciemowicz, Pierre)
  . Paths with NULL in them (foo\0bar.txt) are now considered as invalid. (Rasmus)
  . Fixed a possible double free in imap extension (Identified by Mateusz 
    Kocielski). (CVE-2010-4150). (Ilia)
  . Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
    (CVE-2010-3709). (Maksymilian Arciemowicz)
  . Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)
  . Fixed MOPS-2010-24, fix string validation. (CVE-2010-2950). (Pierre)
  . Fixed symbolic resolution support when the target is a DFS share. (Pierre)
  . Fixed bug #52929 (Segfault in filter_var with FILTER_VALIDATE_EMAIL with
    large amount of data) (CVE-2010-3710). (Adam)

- General improvements:
  . Added stat support for zip stream. (Pierre)